[gd_scene load_steps=5 format=2]

[ext_resource path="res://bars/bottom_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://bars/profile.tscn" type="PackedScene" id=2]
[ext_resource path="res://bars/_bars.gd" type="Script" id=3]
[ext_resource path="res://temporary/circle.png" type="Texture" id=4]

[node name="Bars" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Top" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
theme_type_variation = "_Top"

[node name="V" type="VBoxContainer" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
theme_type_variation = "SeparationN06"

[node name="Top" type="HBoxContainer" parent="Top/V"]
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "SeparationP07"

[node name="SongInfo" type="Label" parent="Top/V/Top"]
margin_right = 1173.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayedByText" type="Label" parent="Top/V/Top"]
margin_left = 1180.0
margin_right = 1319.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"
text = "Played by"

[node name="Name" type="Label" parent="Top/V/Top"]
margin_left = 1326.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontBold30"
text = "Player"

[node name="Bottom" type="HBoxContainer" parent="Top/V"]
margin_top = 43.0
margin_right = 1420.0
margin_bottom = 92.0
theme_type_variation = "SeparationP07"

[node name="DifficultyRating" type="Label" parent="Top/V/Bottom"]
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="DifficultyIcon" type="TextureRect" parent="Top/V/Bottom"]
margin_left = 7.0
margin_right = 32.0
margin_bottom = 49.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ChartInfo" type="Label" parent="Top/V/Bottom"]
margin_left = 39.0
margin_right = 1413.0
margin_bottom = 49.0
size_flags_horizontal = 3
theme_type_variation = "FontRegular030"

[node name="PlayDate" type="Label" parent="Top/V/Bottom"]
margin_left = 1420.0
margin_right = 1420.0
margin_bottom = 49.0
theme_type_variation = "FontRegular030"

[node name="Bottom" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
theme_type_variation = "_Bottom"

[node name="H" type="HBoxContainer" parent="Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "SeparationP03"

[node name="Back" parent="Bottom/H" instance=ExtResource( 1 )]
text = "<<<"

[node name="Button1" parent="Bottom/H" instance=ExtResource( 1 )]
margin_left = 253.0
margin_right = 503.0
text = "a"

[node name="Buffer" type="ColorRect" parent="Bottom/H"]
margin_left = 506.0
margin_right = 934.0
margin_bottom = 100.0
size_flags_horizontal = 3
color = Color( 0, 0, 0, 1 )

[node name="Button2" parent="Bottom/H" instance=ExtResource( 1 )]
margin_left = 937.0
margin_right = 1187.0
text = "b"

[node name="Button3" parent="Bottom/H" instance=ExtResource( 1 )]
margin_left = 1190.0
margin_right = 1440.0
text = "c"

[node name="Profile" parent="Bottom" instance=ExtResource( 2 )]

[connection signal="button_up" from="Bottom/H/Back" to="." method="back_button_pressed"]
